--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "url": "git+https://github.com/amitkeret/recipe-shoppinglist-generator.git"
   },
   "scripts": {
-    "watch-coffee": "npx coffee -o dist/ -cmw recipes.coffee",
-    "watch-jade": "npx pug -o dist/ -Pw index.jade",
+    "watch-coffee": "npx coffee -o dist/ -cmw src/recipes.coffee",
+    "watch-jade": "npx pug -o dist/ -Pw src/index.jade",
     "dev": "concurrently --kill-others \"npm:watch-*\""
   },
   "author": "amitkeret",
